# cv-bot

./: .env.example  .gitignore  README.md
.github/workflows/: deploy.yml  destroy.yml
apps/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  _monorepo_path.py  ingest_cli.py  main.py
apps/backend/app/api/: chat.py  profile.py
apps/backend/app/core/: config.py
apps/backend/app/models/: rag_types.py  schemas.py
apps/backend/app/services/: __init__.py  chat_service.py  document_service.py  llm_openrouter.py  profile_store.py  skill_extractor.py  website_scraper.py
apps/backend/app/utils/: logger.py
apps/backend/examples/: minimal_mangum_handler.py
apps/frontend/: .env.development  .env.local.example  next.config.ts  package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx
apps/frontend/components/chat/: ChatComposer.tsx  ChatHistoryPanel.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  StreamingMessage.tsx
apps/frontend/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
apps/frontend/components/profile/: ContactCard.tsx  EducationCard.tsx  ProfileConfig.ts  (+4 more)
apps/frontend/hooks/: useChat.ts  useComposer.ts  useHydrateChatSession.ts  useNewChat.ts
apps/frontend/lib/: api.ts  types.ts
apps/frontend/store/: chatStore.ts  sessionStore.ts  uiStore.ts
data/: cv.txt  dynamic-profile.json  summary.txt  website.json
infra/terraform/: apigateway.tf  cloudfront.tf  ecr.tf  iam.tf  lambda.tf  locals.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars  variables.tf  versions.tf
