[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "cv-bot-backend"
version = "0.1.0"
description = "FastAPI CV chat API — OpenRouter, Qdrant RAG, S3 memory (Lambda + Mangum)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "aioboto3>=13.0.0",
  "beautifulsoup4>=4.12.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "mangum>=0.18.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pypdf>=5.0.0",
  "qdrant-client>=1.12.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
cv-bot-ingest = "app.ingest_cli:main"

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py311"
